--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "eslint-plugin-import": "^2.26.0",
     "eslint-plugin-node": "^11.1.0",
     "jest": "^28.1.2",
+    "lerna": "^5.6.2",
     "prettier": "^2.7.1",
     "rimraf": "^3.0.2",
     "ts-jest": "^28.0.5",
